# ecrire

./: .arcconfig  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ISSUE_TEMPLATE.md  README  README.md  TODO  cmakeconfig.h.in  sonar-project.properties
data/: CMakeLists.txt  ecrire.desktop
po/: LINGUAS  POTFILES.in  ca.po  da.po  ecrire.pot  eo.po  es.po  fr.po  gl.po  he.po  hu.po  it.po  ko_KR.po  lt.po  pl.po  pt.po  sl.po  sr.po  tr.po  zh_CN.po
utils/: local_build.sh  travis.sh
